--- a/src/components/Newnav.css
+++ b/src/components/Newnav.css
@@ -133,3 +133,47 @@
 .icon-button:hover {
   color: var(--your-hover-color, #888); /* optional */
 }
+
+.roll-hamburger-button {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  background: transparent;
+  border: none;
+  margin-left: 20px; /* spacing from social icons */
+  padding: 0;
+}
+
+.roll-hamburger-button .bar {
+  width: 100%;
+  height: 3px;
+  background-color: white; /* change color as needed */
+  border-radius: 2px;
+}
+.roll-hamburger-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;      /* width of the hamburger */
+  height: 25px;     /* height of the hamburger */
+  padding: 0;
+  margin-left: 15px; /* space from social icons */
+  box-sizing: content-box;
+}
+
+.roll-hamburger-button:focus {
+  outline: none;
+}
+
+.roll-hamburger-button .bar {
+  width: 100%;
+  height: 3px;
+  background-color: #141414; /* or any visible color */
+  border-radius: 2px;
+}
