--- a/Resources.css
+++ b/Resources.css
@@ -886,7 +886,7 @@
   transform: translateX(-50px);
 }
 
-.quote-text {
+.quote-text8 {
   font-size: 1.4rem; /* Slightly smaller text */
   line-height: 1.3;
   font-style: italic;
